# scholia

./: .dockerignore  .gitignore  .sops.yaml  CLAUDE.md  COMMANDS.md  Cargo.toml  NOTICE  PLAN_3_TIER.md  PLAN_ARGOCD.md  PLAN_AUTO_INGEST.md  PLAN_BIG_BOOKS.md  PLAN_DEVOPS.md  PLAN_DRAMA.md  PLAN_INGEST_REFACTOR.md  PLAN_REFACTOR.md  PLAN_SHAPE3.md  README.md  REFACTOR_PLAN.md  RESULT.md  TODO.md  biome.json  cspell.json  db_bible.sh  db_kant1.sh  err.json  external.md  info.md  justfile  lefthook.yml  modernize_kant.py  openapi.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  result_stripe.md  skills-lock.json  summary.md  temp.txt  temp_suggestion.md  turbo.json
apps/api/: Cargo.toml  Dockerfile  package.json
apps/api/src/: cache.rs  config.rs  email.rs  error.rs  lib.rs  main.rs  migrate.rs  state.rs
apps/api/src/auth/: middleware.rs  mod.rs
apps/api/src/db/: article_quotations.rs  articles.rs  books.rs  citations.rs  facsimile.rs  feedback.rs  mod.rs  nodes.rs  page.rs  sources.rs  toc.rs  users.rs
apps/api/src/handlers/: article_quotations.rs  articles.rs  auth.rs  billing.rs  library.rs  page.rs  persons.rs  quotations.rs  resources.rs  sources.rs  users.rs
apps/api/src/models/: resource.rs  user.rs
apps/api/src/modules/: mod.rs
apps/api/src/modules/billing/: handlers.rs  mod.rs
apps/api/src/modules/corpus/: mod.rs
apps/api/src/modules/corpus/bibliography/: mod.rs  models.rs
apps/api/src/modules/corpus/core/: mod.rs
apps/api/src/modules/corpus/reading/: mod.rs
apps/api/src/modules/feedback/: db.rs  handlers.rs  mod.rs  models.rs
apps/api/src/modules/identity/: mod.rs
apps/api/src/modules/identity/accounts/: db.rs  handlers.rs  models.rs
apps/api/src/modules/identity/oauth/: handlers.rs  mod.rs
apps/api/src/modules/identity/profiles/: handlers.rs  mod.rs
apps/api/src/modules/seo/: db.rs  handlers.rs  mod.rs
apps/api/src/modules/writing/: mod.rs
apps/api/src/system/: cache.rs  config.rs  email.rs  error.rs  migrate.rs  mod.rs  rate_limit.rs  sanitize.rs  serde_util.rs  state.rs  validation.rs
apps/api/src/system/auth/: handle.rs  middleware.rs  tokens.rs
(+2067 files in other folders)
