[package]
name = "api"
version = "0.1.0"
edition = "2024"
default-run = "api"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tower-sessions = "0.15"
tower-sessions-sqlx-store = { git = "https://github.com/maxcountryman/tower-sessions-stores", features = ["postgres"] }
tower_governor = "0.8"
# Underlying rate-limiter behind tower_governor; named directly so
# system::rate_limit can spell out GovernorConfig's middleware type.
governor = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"
utoipa = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
oauth2 = "5"
resend-rs = "0.22"
reqwest = { version = "0.12", features = ["json"] }
pulldown-cmark = "0.12"
# Allowlist HTML sanitizer (html5ever-based). Applied to every byte of
# user-authored HTML we persist, since the frontend renders it with a
# parser that does not sanitize. See system::sanitize.
ammonia = "4"
slug = "0.1"
regex = "1"

# Stripe (async-stripe v1.0.0-rc.5 — split into per-resource subcrates).
# Default TLS backend is hyper-tls (matches existing reqwest setup).
async-stripe = { version = "=1.0.0-rc.5", features = ["uuid"] }
async-stripe-types = "=1.0.0-rc.5"
async-stripe-shared = "=1.0.0-rc.5"
async-stripe-core = { version = "=1.0.0-rc.5", features = ["customer"] }
async-stripe-billing = { version = "=1.0.0-rc.5", features = ["subscription", "billing_portal_session"] }
async-stripe-checkout = { version = "=1.0.0-rc.5", features = ["checkout_session"] }
async-stripe-webhook = { version = "=1.0.0-rc.5", features = ["async-stripe-billing"] }
